--- a/final/index.html
+++ b/final/index.html
@@ -127,9 +127,6 @@
         </div>
       </div>
 
-<!--restart the div container-->
-  <div class="container">
-
       <p>“I would say Simone’s legacy is actually far greater reaching than medal count, and her beginning to help facilitate the change of culture in our sport,” said Bob Neat, director of communications for the National Gymnastics Association.</p>
 
       <p>He said Biles, who has 32 Olympic and world medals, will represent a shift toward advocating for more safety and better treatment of athletes and coaches.</p>
@@ -140,7 +137,11 @@
 
       <p>She cited the mental and emotional toll of competing in the Games as reasons for backing out.</p>
 
-      <!--add pullquote-->
+      <!--pullquote goes here-->
+      <div class="quote">
+        “I feel before, her legacy was going to be about her ability and skill and showing brown girls you can be who you want to be.”
+        <p class="quote-attribution"> -Derrin Moore, founder of the Atlanta-based advocacy group Brown Girls Do Gymnastic
+      </div>
 
       <p>"Physically, I feel good. I'm in shape," she told Hoda Kotb on NBC's "TODAY" show following her exit. "Emotionally, it varies on the time and moment. Coming to the Olympics and being head star isn't an easy feat."</p>
 
@@ -158,12 +159,13 @@
           <img src="images/simone-twisties.jpg" alt="Graphic of a play-by-play of the twisties">
           <p class="caption"><a href="https://www.health.com/condition/mental-health-conditions/simone-biles-twisties-gymnastics"> Getty Images</a></p>
         </div>
+
+        <div class="col-md-6">
           <iframe width="420" height="315"
           src="https://www.youtube.com/watch?v=nO-vMUApyJQ">
           </iframe>
-        <div class="col-md-6">
-
         </div>
+      </div>
 
 
       <p>Derrin Moore, founder of the Atlanta-based advocacy group Brown Girls Do Gymnastics, said Biles’ legacy will forever be tied to her decision in Tokyo.</p>
@@ -174,7 +176,14 @@
 
       <p>Biles’ influence on the sport will likely grow through World Champions Centre, the Houston-area training facility her parents founded, where she will most likely mold the next wave of world-class gymnasts.</p>
 
-      <!--add full size picture of Simone-->
+  </div>
+  <!-- stopped container to add a full screen photo-->
+
+    <img src="images/simone_biles.jpg" alt="Image of Simone Biles in a Wonder Woman leotard">
+    <p class="caption"><a href="https://fortworth.culturemap.com/news/entertainment/12-02-21-simone-biles-gold-over-america-tour-gymnastics-show-streaming/"> Stephanie Allmon Merry</a> | Culture Map Forth Worth</p>
+
+<!--restart container-->
+  <div class="container">
 
       <p>“Simone was one of the first people to open up a gym and coach the kids the way she wanted to be coached. Simone was always talented, but she always wanted to do more,” said Ashley Umberger, a 2001 USA national team gymnastics member.</p>
 
@@ -193,7 +202,11 @@
 
       <p>Chiles then credited Biles with bringing about a culture change.</p>
 
-<!--pullquote goes here-->
+      <!--pullquote goes here-->
+      <div class="quote">
+        "I don’t think it’s possible to forget Simone Biles.”
+        <p class="quote-attribution"> -Ashley Umberger, a 2001 USA national team gymnastics member
+      </div>
 
       <p>“The fact that the gym is Black-owned makes it a beacon for Black elite gymnasts,” Moore said. “That’s not by happenstance. That’s a Simone thing. It’s going to become the blueprint.”</p>
 
