--- a/final/index.html
+++ b/final/index.html
@@ -97,130 +97,107 @@
 <!--end container so that I can add a bootstrap grid with my graphs-->
 
 <div class="row">
-  <div class="col-md-6">
-    <iframe title="Medals won in the 2016 Olympic gymnastic team" aria-label="Stacked Bars" id="datawrapper-chart-7lP6s" src="https://datawrapper.dwcdn.net/7lP6s/7/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="307"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-    </script>
+    <div class="col-md-6">
+      <iframe title="Medals won in the 2016 Olympic gymnastic team" aria-label="Stacked Bars" id="datawrapper-chart-7lP6s" src="https://datawrapper.dwcdn.net/7lP6s/8/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="307"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
+    </div>
+
+    <div class="col-md-6">
+      <iframe title="Medals won in the 2020 Olympic gymnastic team" aria-label="Stacked Bars" id="datawrapper-chart-YbdgZ" src="https://datawrapper.dwcdn.net/YbdgZ/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="259"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+      </script>
+    </div>
   </div>
 
-  <div class="col-md-6">
-    <iframe title="Medals won in the 2020 Olympic gymnastic team" aria-label="Stacked Bars" id="datawrapper-chart-YbdgZ" src="https://datawrapper.dwcdn.net/YbdgZ/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="259"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-    </script>
-  </div>
 
   <div class="container">
 
     <p>Nassar, the USA Gymnastics team’s former doctor, was accused of sexually assaulting more than 120 girls. He pleaded guilty to sexually abusing 10 minors in Michigan court in 2018 and is serving up to 175 years in prison.</p>
 
+    <p>Biles, who said she is a survivor of Nassar’s abuse, has spoken out in the past about how it affected her, and said that her Olympics performance was “probably” affected by it.</p>
 
-<!--text to the right and picture to the left-->
-    <div class="row">
-      <div class="col-md-6">
-        <p>Biles, who said she is a survivor of Nassar’s abuse, has spoken out in the past about how it affected her, and said that her Olympics performance was “probably” affected by it.</p>
+    <img src="images/simone_testify.jpg" alt="Simone Biles testifying at Larry Nassar's trial">
+    <p class="caption"><a href="https://www.latimes.com/sports/story/2021-09-15/simone-biles-other-gymnasts-criticize-fbis-handling-of-larry-nassar-case-at-hearing"> Saul Loeb</a> | Associated Press</p>
 
-        <p>She now has the opportunity to continue speaking out against sexual assault and promoting any other social banners she chooses to carry.</p>
-      </div>
+    <p>She now has the opportunity to continue speaking out against sexual assault and promoting any other social banners she chooses to carry.</p>
 
-      <div class="col-md-6">
-        <div class="image">
-          <img src="images/simone_testify.jpg" alt="Simone Biles testifying at Larry Nassar's trial">
-          <p class="caption"><a href="https://www.latimes.com/sports/story/2021-09-15/simone-biles-other-gymnasts-criticize-fbis-handling-of-larry-nassar-case-at-hearing"> Saul Loeb</a> | Associated Press</p>
-        </div>
-      </div>
+    <p>“I would say Simone’s legacy is actually far greater reaching than medal count, and her beginning to help facilitate the change of culture in our sport,” said Bob Neat, director of communications for the National Gymnastics Association.</p>
 
-      <p>“I would say Simone’s legacy is actually far greater reaching than medal count, and her beginning to help facilitate the change of culture in our sport,” said Bob Neat, director of communications for the National Gymnastics Association.</p>
+    <p>He said Biles, who has 32 Olympic and world medals, will represent a shift toward advocating for more safety and better treatment of athletes and coaches.</p>
 
-      <p>He said Biles, who has 32 Olympic and world medals, will represent a shift toward advocating for more safety and better treatment of athletes and coaches.</p>
+    <p>Neat predicted she’ll become more outspoken and take on a bigger stage</p>.
 
-      <p>Neat predicted she’ll become more outspoken and take on a bigger stage</p>.
+    <p>In Tokyo, Biles withdrew from the team all-around, the individual all-around, the vault, floor exercise and uneven bar events after struggling early on.</p>
 
-      <p>In Tokyo, Biles withdrew from the team all-around, the individual all-around, the vault, floor exercise and uneven bar events after struggling early on.</p>
+    <p>She cited the mental and emotional toll of competing in the Games as reasons for backing out.</p>
 
-      <p>She cited the mental and emotional toll of competing in the Games as reasons for backing out.</p>
+    <!--pullquote goes here-->
+    <div class="quote">
+      “I feel before, her legacy was going to be about her ability and skill and showing brown girls you can be who you want to be.”
+      <p class="quote-attribution"> -Derrin Moore, founder of the Atlanta-based advocacy group Brown Girls Do Gymnastic
+    </div>
 
-      <!--pullquote goes here-->
-      <div class="quote">
-        “I feel before, her legacy was going to be about her ability and skill and showing brown girls you can be who you want to be.”
-        <p class="quote-attribution"> -Derrin Moore, founder of the Atlanta-based advocacy group Brown Girls Do Gymnastic
-      </div>
+    <p>"Physically, I feel good. I'm in shape," she told Hoda Kotb on NBC's "TODAY" show following her exit. "Emotionally, it varies on the time and moment. Coming to the Olympics and being head star isn't an easy feat."</p>
 
-      <p>"Physically, I feel good. I'm in shape," she told Hoda Kotb on NBC's "TODAY" show following her exit. "Emotionally, it varies on the time and moment. Coming to the Olympics and being head star isn't an easy feat."</p>
+    <p>Her decision drew harsh criticism from many who said she had quit on her team, and praise from mental health supporters who backed Biles, the most decorated gymnast in history, for knowing when to take time for herself.</p>
 
-      <p>Her decision drew harsh criticism from many who said she had quit on her team, and praise from mental health supporters who backed Biles, the most decorated gymnast in history, for knowing when to take time for herself.</p>
+    <p>Biles, a Black woman dominating a majority white sport, said she felt a lot of pressure heading into the international competition.</p>
 
-      <p>Biles, a Black woman dominating a majority white sport, said she felt a lot of pressure heading into the international competition.</p>
+    <p>It’s “like the weight of the world on your shoulders," she said. It’s a "little bit too heavy to carry," but it helps to take a step back and focus on her mental health, she said.</p>
 
-      <p>It’s “like the weight of the world on your shoulders," she said. It’s a "little bit too heavy to carry," but it helps to take a step back and focus on her mental health, she said.</p>
+    <p>At the time, the Olympian said she was dealing with the “twisties,” a phenomenon that can cause potential injury when gymnasts lose their sense of space and dimension midair — even if they have performed the same maneuver for years without problems.</p>
 
-      <p>At the time, the Olympian said she was dealing with the “twisties,” a phenomenon that can cause potential injury when gymnasts lose their sense of space and dimension midair — even if they have performed the same maneuver for years without problems.</p>
+    <img src="images/simone-twisties.jpg" alt="Graphic of a play-by-play of the twisties">
+    <p class="caption"><a href="https://www.health.com/condition/mental-health-conditions/simone-biles-twisties-gymnastics"> Getty Images</a></p>
 
-      <!--add photo and video of twisties-->
-      <div class="row">
-        <div class="col-md-6">
-          <img src="images/simone-twisties.jpg" alt="Graphic of a play-by-play of the twisties">
-          <p class="caption"><a href="https://www.health.com/condition/mental-health-conditions/simone-biles-twisties-gymnastics"> Getty Images</a></p>
-        </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/nO-vMUApyJQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-        <div class="col-md-6">
-          <iframe width="420" height="315"
-          src="https://www.youtube.com/watch?v=nO-vMUApyJQ">
-          </iframe>
-        </div>
-      </div>
+    <p>Derrin Moore, founder of the Atlanta-based advocacy group Brown Girls Do Gymnastics, said Biles’ legacy will forever be tied to her decision in Tokyo.</p>
 
+    <p>“I feel before, her legacy was going to be about her ability and skill and showing brown girls you can be who you want to be,” Moore said. “But now that she bowed out of a lot of the Olympics, I think her legacy will be around mental health. As tough as she is, and as talented as she is, she still knew when she needed to take a break. I think that’s huge for her.”</p>
 
-      <p>Derrin Moore, founder of the Atlanta-based advocacy group Brown Girls Do Gymnastics, said Biles’ legacy will forever be tied to her decision in Tokyo.</p>
+    <p>Biles wasn’t afraid to push the envelope or be the greatest gymnast, which opens the door for more Black and brown girls to follow in her footsteps, she said.</p>
 
-      <p>“I feel before, her legacy was going to be about her ability and skill and showing brown girls you can be who you want to be,” Moore said. “But now that she bowed out of a lot of the Olympics, I think her legacy will be around mental health. As tough as she is, and as talented as she is, she still knew when she needed to take a break. I think that’s huge for her.”</p>
-
-      <p>Biles wasn’t afraid to push the envelope or be the greatest gymnast, which opens the door for more Black and brown girls to follow in her footsteps, she said.</p>
-
-      <p>Biles’ influence on the sport will likely grow through World Champions Centre, the Houston-area training facility her parents founded, where she will most likely mold the next wave of world-class gymnasts.</p>
-
-  </div>
-  <!-- stopped container to add a full screen photo-->
+    <p>Biles’ influence on the sport will likely grow through World Champions Centre, the Houston-area training facility her parents founded, where she will most likely mold the next wave of world-class gymnasts.</p>
 
     <img src="images/simone_biles.jpg" alt="Image of Simone Biles in a Wonder Woman leotard">
     <p class="caption"><a href="https://fortworth.culturemap.com/news/entertainment/12-02-21-simone-biles-gold-over-america-tour-gymnastics-show-streaming/"> Stephanie Allmon Merry</a> | Culture Map Forth Worth</p>
 
-<!--restart container-->
-  <div class="container">
+    <p>“Simone was one of the first people to open up a gym and coach the kids the way she wanted to be coached. Simone was always talented, but she always wanted to do more,” said Ashley Umberger, a 2001 USA national team gymnastics member.</p>
 
-      <p>“Simone was one of the first people to open up a gym and coach the kids the way she wanted to be coached. Simone was always talented, but she always wanted to do more,” said Ashley Umberger, a 2001 USA national team gymnastics member.</p>
+    <p>Biles can lean on her experience to train future Olympic gymnasts, she said.</p>
 
-      <p>Biles can lean on her experience to train future Olympic gymnasts, she said.</p>
+    <p>“You understand the training and mentality because you were the athlete. And once the athlete becomes the coach, it’s like another realm,” Umberger, who owns North Stars Gymnastics in New Jersey, said. “She’s going to have the feel of going to the Olympics, she’s going to have the experience of what it’s like to be an Olympic champion and what it feels like to make a mistake and come back.”</p>
 
-      <p>“You understand the training and mentality because you were the athlete. And once the athlete becomes the coach, it’s like another realm,” Umberger, who owns North Stars Gymnastics in New Jersey, said. “She’s going to have the feel of going to the Olympics, she’s going to have the experience of what it’s like to be an Olympic champion and what it feels like to make a mistake and come back.”</p>
+    <p>World Champions Centre has already had big successes.</p>
 
-      <p>World Champions Centre has already had big successes.</p>
-
-      <p>Olympic gymnast Jordan Chiles, who nearly quit the sport before starting her training there in 2018, was Biles’ last-minute replacement this year, helping Team USA win a silver medal.</p>
+    <p>Olympic gymnast Jordan Chiles, who nearly quit the sport before starting her training there in 2018, was Biles’ last-minute replacement this year, helping Team USA win a silver medal.</p>
 
       <!--added map-->
-      <iframe title="Top Gymnastic Gyms" aria-label="Locator maps" id="datawrapper-chart-65ucr" src="https://datawrapper.dwcdn.net/65ucr/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="532"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();</script>
+    <iframe title="Top Gymnastic Gyms" aria-label="Locator maps" id="datawrapper-chart-65ucr" src="https://datawrapper.dwcdn.net/65ucr/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="532"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();</script>
 
-      <p>“I lived in a world where everything [was] strict, strict, strict,” Chiles told NBC Sports in May. “They’ve (World Champions) given me so much encouragement. I didn’t get that too much in the past.”</p>
+    <p>“I lived in a world where everything [was] strict, strict, strict,” Chiles told NBC Sports in May. “They’ve (World Champions) given me so much encouragement. I didn’t get that too much in the past.”</p>
 
-      <p>Chiles then credited Biles with bringing about a culture change.</p>
+    <p>Chiles then credited Biles with bringing about a culture change.</p>
 
       <!--pullquote goes here-->
-      <div class="quote">
-        "I don’t think it’s possible to forget Simone Biles.”
-        <p class="quote-attribution"> -Ashley Umberger, a 2001 USA national team gymnastics member
-      </div>
+    <div class="quote">
+      "I don’t think it’s possible to forget Simone Biles.”
+      <p class="quote-attribution"> -Ashley Umberger, a 2001 USA national team gymnastics member
+    </div>
 
-      <p>“The fact that the gym is Black-owned makes it a beacon for Black elite gymnasts,” Moore said. “That’s not by happenstance. That’s a Simone thing. It’s going to become the blueprint.”</p>
+    <p>“The fact that the gym is Black-owned makes it a beacon for Black elite gymnasts,” Moore said. “That’s not by happenstance. That’s a Simone thing. It’s going to become the blueprint.”</p>
 
-      <p>As great of an athlete as Biles is, some believe her spotlight may dim a little in the years ahead.</p>
+    <p>As great of an athlete as Biles is, some believe her spotlight may dim a little in the years ahead.</p>
 
-      <p>“There’s always somebody new that’s going to come and maybe make new achievements,” said Tori Ford, a women’s gymnastics coach at Discover Gymnastics in Houston. “She won’t be forgotten about all the way.”</p>
+    <p>“There’s always somebody new that’s going to come and maybe make new achievements,” said Tori Ford, a women’s gymnastics coach at Discover Gymnastics in Houston. “She won’t be forgotten about all the way.”</p>
 
-      <p>It wouldn’t be the first time a well-known Olympic gymnast has faded. Dominique Dawes and Shannon Miller, who both won gold medals as part of the 1996 “Magnificent Seven” team, were once household names who aren’t in the public eye as much anymore.</p>
+    <p>It wouldn’t be the first time a well-known Olympic gymnast has faded. Dominique Dawes and Shannon Miller, who both won gold medals as part of the 1996 “Magnificent Seven” team, were once household names who aren’t in the public eye as much anymore.</p>
 
-      <p>“I don’t think it’s possible to forget Simone Biles,” Umberger said.</p>
+    <p>“I don’t think it’s possible to forget Simone Biles,” Umberger said.</p>
 
-      <p>Neat reiterated that Biles’ impact will eventually surpass her accomplishments and steering the next generation of athletes.</p>
+    <p>Neat reiterated that Biles’ impact will eventually surpass her accomplishments and steering the next generation of athletes.</p>
 
-      <p>“Her role isn’t going to be just coaching in the gym, but leading a cultural shift of protecting the wellness of athletes and coaches. Her biggest role coming out of the Olympic Games is helping to shift the culture. That’s her legacy. She is the person to do it. She is the individual that understands it better than anybody.”</p>
+    <p>“Her role isn’t going to be just coaching in the gym, but leading a cultural shift of protecting the wellness of athletes and coaches. Her biggest role coming out of the Olympic Games is helping to shift the culture. That’s her legacy. She is the person to do it. She is the individual that understands it better than anybody.”</p>
 
   </div>
 
