Update index.html and style.css
Changed the page topper to do good things instead of not so good things

--- a/final/index.html
+++ b/final/index.html
@@ -24,26 +24,39 @@
 </head>
 <body>
 
-<!-- page topper-->
+  <!--nav bar bootstrap-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+
+  <!--logo-->
+    <span class="nav-logo"><span class="red">Simone Biles:</span> Mental Health</span>
+  </nav>
+<!-- // End nav bar -->
+
+
+<!-- page topper
   <section class="bgimage">
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <h1>Simone Biles' impact: It's not just gymnastics</h1>
+            <p class="header_caption"><a href="https://www.nbcnews.com/think/opinion/simone-biles-withdraws-olympics-team-final-after-vault-miss-proving-ncna1275205"> Ana Marie Cox</a> | NBC News</p>
         </div>
       </div>
     </div>
   </section>
-  <p class="caption"><a href="https://www.nbcnews.com/think/opinion/simone-biles-withdraws-olympics-team-final-after-vault-miss-proving-ncna1275205"> Ana Marie Cox</a> | NBC News</p>
+-->
+
+<!--splash-->
+<div class="hero-container">
+<img src="images/simone_header.jpg" class="hero-image" alt="Simone Biles landing a skill">
+  <div class="overlay">
+      <div class="hero-head"> Simone Biles' impact: It's not just gymnastic>
+      </div>
+  </div>
+  <div class="hero-sub"><a href="https://www.nbcnews.com/think/opinion/simone-biles-withdraws-olympics-team-final-after-vault-miss-proving-ncna1275205"> Ana Marie Cox</a> | NBC News</div>
+</div>
 
 
-  <!--nav bar bootstrap-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-
-  <!--logo-->
-    <span class="nav-logo"><span class="red">Simone Biles:</span>Mental Health</span>
-  </nav>
-<!-- // End nav bar -->
 
 
   <div class="container">
