--- a/final/index.html
+++ b/final/index.html
@@ -50,7 +50,7 @@
 <div class="hero-container">
 <img src="images/simone_header.jpg" class="hero-image" alt="Simone Biles landing a skill">
   <div class="overlay">
-      <div class="hero-head"> Simone Biles' impact: It's not just gymnastic>
+      <div class="hero-head"> Simone Biles' impact: It's not just gymnastics
       </div>
   </div>
   <div class="hero-sub"><a href="https://www.nbcnews.com/think/opinion/simone-biles-withdraws-olympics-team-final-after-vault-miss-proving-ncna1275205"> Ana Marie Cox</a> | NBC News</div>
