--- a/final/index.html
+++ b/final/index.html
@@ -33,7 +33,7 @@
 <!-- // End nav bar -->
 
 
-<!-- page topper
+<!-- old page topper
   <section class="bgimage">
     <div class="container-fluid">
       <div class="row">
@@ -92,6 +92,7 @@
 
     <p>Nassar, the USA Gymnastics team’s former doctor, was accused of sexually assaulting more than 120 girls. He pleaded guilty to sexually abusing 10 minors in Michigan court in 2018 and is serving up to 175 years in prison.</p>
 
+<!--left aligned -->
     <figure class="fig1">
       <img  class="testify" src="images/simone_testify.jpg" alt="Simone Biles testifying at Larry Nassar's trial">
       <figcaption class="caption"><a href="https://www.latimes.com/sports/story/2021-09-15/simone-biles-other-gymnasts-criticize-fbis-handling-of-larry-nassar-case-at-hearing"> Saul Loeb</a> | Associated Press
