Update index.html and style.css
Added the final styling and I think I'm ready to submit!!!

--- a/final/index.html
+++ b/final/index.html
@@ -18,7 +18,7 @@
 <!-- Google Fonts-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Montserrat:wght@700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway&display=swap" rel="stylesheet">
 
 
 </head>
@@ -107,17 +107,23 @@
 
     <p>He said Biles, who has 32 Olympic and world medals, will represent a shift toward advocating for more safety and better treatment of athletes and coaches.</p>
 
-    <p>Neat predicted she’ll become more outspoken and take on a bigger stage</p>.
+    <p>Neat predicted she’ll become more outspoken and take on a bigger stage.</p>
 
     <p>In Tokyo, Biles withdrew from the team all-around, the individual all-around, the vault, floor exercise and uneven bar events after struggling early on.</p>
 
     <p>She cited the mental and emotional toll of competing in the Games as reasons for backing out.</p>
+
+  </div>
+  <!--ended container so pullquote can go across whole page-->
 
     <!--pullquote goes here-->
     <div class="quote">
       “I feel before, her legacy was going to be about her ability and skill and showing brown girls you can be who you want to be.”
       <p class="quote-attribution"> -Derrin Moore, founder of the Atlanta-based advocacy group Brown Girls Do Gymnastic
     </div>
+
+  <!--restart container div-->
+  <div class="container">
 
     <p>"Physically, I feel good. I'm in shape," she told Hoda Kotb on NBC's "TODAY" show following her exit. "Emotionally, it varies on the time and moment. Coming to the Olympics and being head star isn't an easy feat."</p>
 
@@ -130,9 +136,14 @@
     <p>At the time, the Olympian said she was dealing with the “twisties,” a phenomenon that can cause potential injury when gymnasts lose their sense of space and dimension midair — even if they have performed the same maneuver for years without problems.</p>
 
     <img src="images/simone-twisties.jpg" alt="Graphic of a play-by-play of the twisties">
-    <p class="caption"><a href="https://www.health.com/condition/mental-health-conditions/simone-biles-twisties-gymnastics"> Getty Images</a></p>
+    <p class="credit"><a href="https://www.health.com/condition/mental-health-conditions/simone-biles-twisties-gymnastics"> Getty Images</a></p>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/nO-vMUApyJQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<!--to center the video I used https://www.youtube.com/watch?v=EW4KWeX8dAw-->
+    <center>
+      <iframe width="853" height="480" src="https://www.youtube.com/embed/nO-vMUApyJQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p class="credit"><a href="https://www.youtube.com/watch?v=nO-vMUApyJQ">NBC Sports</a></p>
+    </center>
 
     <p>Derrin Moore, founder of the Atlanta-based advocacy group Brown Girls Do Gymnastics, said Biles’ legacy will forever be tied to her decision in Tokyo.</p>
 
@@ -143,7 +154,7 @@
     <p>Biles’ influence on the sport will likely grow through World Champions Centre, the Houston-area training facility her parents founded, where she will most likely mold the next wave of world-class gymnasts.</p>
 
     <img src="images/simone_biles.jpg" alt="Image of Simone Biles in a Wonder Woman leotard">
-    <p class="caption"><a href="https://fortworth.culturemap.com/news/entertainment/12-02-21-simone-biles-gold-over-america-tour-gymnastics-show-streaming/"> Stephanie Allmon Merry</a> | Culture Map Forth Worth</p>
+    <p class="credit"><a href="https://fortworth.culturemap.com/news/entertainment/12-02-21-simone-biles-gold-over-america-tour-gymnastics-show-streaming/"> Stephanie Allmon Merry</a> | Culture Map Forth Worth</p>
 
     <p>“Simone was one of the first people to open up a gym and coach the kids the way she wanted to be coached. Simone was always talented, but she always wanted to do more,” said Ashley Umberger, a 2001 USA national team gymnastics member.</p>
 
@@ -162,11 +173,16 @@
 
     <p>Chiles then credited Biles with bringing about a culture change.</p>
 
+  </div>
+  <!--ended div so pullquote can go across full page-->
+
       <!--pullquote goes here-->
     <div class="quote">
       "I don’t think it’s possible to forget Simone Biles.”
       <p class="quote-attribution"> -Ashley Umberger, a 2001 USA national team gymnastics member
     </div>
+
+  <div class="container">
 
     <p>“The fact that the gym is Black-owned makes it a beacon for Black elite gymnasts,” Moore said. “That’s not by happenstance. That’s a Simone thing. It’s going to become the blueprint.”</p>
 
@@ -188,8 +204,8 @@
 <!--Footer-->
   <footer>
 
-    <p>Footer Text</p>
-
+    <p>Website designed by Melinda Thompson</p>
+    
     <p>Copywrite 2021 Capital News Service</p>
 
   </footer>
